# local-llm-fast-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  enums.py  main.py  schemas.py
app/api/: auth_routes.py  routes.py
app/auth/: __init__.py  database.py  public_paths.py  security.py
app/infra/: logging.py  metrics.py  request_context.py
app/middleware/: auth.py  rate_limit.py
app/providers/: base.py  deepseek_openai.py  lmstudio_openai.py  mock_local.py  openai_sdk.py
app/services/: chat_service.py  model_router.py
deploy/: nginx.conf
