[project]
name = "local-llm-fastapi-api"
version = "0.1.0"
description = "FastAPI wrapper for local LLM with OpenAI-compatible endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "fastapi",
    "httpx",
    "isort>=8.0.1",
    "openai",
    "prometheus-client",
    "pydantic>=2",
    "pydantic-settings",
    "pyjwt>=2.13.0",
    "python-dotenv",
    "redis",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
